[gd_scene load_steps=2 format=3 uid="uid://1c8j1ethack"]

[ext_resource type="Script" path="res://Scripts/PuzzleUI.gd" id="1_0biyu"]

[node name="PuzzleUI" type="CanvasLayer"]
script = ExtResource("1_0biyu")

[node name="MovesLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "剩余步数:10"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_bottom = 23.0
grow_horizontal = 0
text = "分数 0"

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 23.0
grow_horizontal = 2
text = "第1关"

[node name="LevelCompletePanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompletePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LevelCompletePanel/VBoxContainer"]
layout_mode = 2
text = "通关啦！"

[node name="NextLevelButton" type="Button" parent="LevelCompletePanel/VBoxContainer"]
layout_mode = 2
text = "下一关"
